--- a/styles/contact-part.css
+++ b/styles/contact-part.css
@@ -20,6 +20,7 @@
 
 .contacts__map {
     width: 50%;
+    height: 500px;
 }
 
 .contacts__wrapper {
@@ -68,6 +69,7 @@
 
     .contacts__map{
         width: 70%;
+        height: 400px;
     }
 
     .contacts__wrapper {
@@ -116,6 +118,7 @@
     
     .contacts__map {
         width: 100%;
+        height: 200px;
     }
 
     
