--- a/styles/services.css
+++ b/styles/services.css
@@ -76,4 +76,23 @@
     }
 }
 
+/* 483px */
+@media(max-width: 483px) {
+    .services__items {
+        grid-gap: 15px;
+        width: 100%;
+    }
+
+    .services__name {
+        padding: 15px;
+
+        font-size: var(--text-15);
+    }
+
+    .services__img svg {
+        width: 40px;
+        height: 40px;
+    }
+}
+
 /* 2.MEDIA END */
